<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">About</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="add_deadline">Deadline</string>
    <string name="add_username">Username</string>
    <string name="add_description">Description</string>
    <string name="add_category">Category</string>
    <string name="add_price_per_hour">Price per hour</string>
    <string name="add_10_eur">10</string>
    <string name="add_20_eur">20</string>
    <string name="add_30_eur">30</string>
    <string name="add_save_task">Save Task</string>

    <string-array name="add_category">
        <item>Web Development</item>
        <item>Android Development</item>
        <item>DevOps</item>
        <item>Data Engineering</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Profile fragment</string>
    <string name="hello_about_fragment">About Fragment</string>
    <string name="main_menu_import_data">Import Data</string>
    <string name="row_deadline">Deadline</string>
    <string name="row_price_template">%.2f EUR</string>
</resources>