<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">

    <TextView
        android:id="@+id/add_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/add_a_new_task"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"

        android:layout_margin="8dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_til_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/add_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_tiet_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/add_deadline"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/add_til_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_tiet_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_username"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/add_til_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_tiet_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/add_description"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/add_tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/add_til_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"

        android:text="@string/add_category"
        android:textColor="@color/black"
        />

    <Spinner
        android:id="@+id/add_spinner_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/add_tv_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"

        android:entries="@array/add_category"
        />

    <TextView
        android:id="@+id/add_tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_price_per_hour"
        app:layout_constraintTop_toBottomOf="@id/add_spinner_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"
        android:textColor="@color/black"
        />

    <RadioGroup
        android:id="@+id/add_rad_group_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/add_tv_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_margin="8dp"

        android:weightSum="3"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_rb_price_10"
            android:text="@string/add_10_eur"
            android:layout_weight="1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_rb_price_20"
            android:text="@string/add_20_eur"
            android:layout_weight="1"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_rb_price_30"
            android:text="@string/add_30_eur"
            android:layout_weight="1"
            />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:id="@+id/add_btn_save"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:text="@string/add_save_task"

        android:layout_margin="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>